TSVPORTAL-11403 - Modify directive view

--- a/app/views/directives/image-upload.html
+++ b/app/views/directives/image-upload.html
@@ -8,7 +8,7 @@
     <b>Drop Images, or Click.</b>
 
     <p>Accepted file formats: {{fileFormat}}.</p>
-    <p ng-show="formData.companyTypeId==1">{{imageNameMessage}}{{formData.companyCode}}.{{fileFormat}}</p>
+    <p ng-show="formData.companyTypeId==1">{{imageNameMessage}}{{imageName}}.{{fileFormat}}</p>
   </div>
 
   <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
