--- a/app/views/company-create.html
+++ b/app/views/company-create.html
@@ -231,11 +231,11 @@
 
             <input-text ng-if="formData.companyTypeId == 1" label="ePOS Home Screen Logo File Name" name="ePOSHomeScreenLogoFileName"></input-text>
 
-            <image-upload ng-if="formData.companyTypeId == 1 && formData.ePOSHomeScreenLogoFileName" image-type="homeLogo" form-data-bind="formData" editing-company="editingCompany" ng-hide="isDisabled()"></image-upload>
+            <image-upload ng-if="formData.companyTypeId == 1 && formData.ePOSHomeScreenLogoFileName" image-name="{{formData.ePOSHomeScreenLogoFileName}}" image-type="homeLogo" form-data-bind="formData" editing-company="editingCompany" ng-hide="isDisabled()"></image-upload>
 
             <input-text ng-if="formData.companyTypeId == 1" label="ePOS Brand Corner Logo File Name" name="ePOSBrandCornerLogoFileName"></input-text>
 
-            <image-upload ng-if="formData.companyTypeId == 1" image-type="cornerLogo" form-data-bind="formData" editing-company="editingCompany" ng-hide="isDisabled()"></image-upload>
+            <image-upload ng-if="formData.companyTypeId == 1 && formData.ePOSBrandCornerLogoFileName" image-name="{{formData.ePOSBrandCornerLogoFileName}}" image-type="cornerLogo" form-data-bind="formData" editing-company="editingCompany" ng-hide="isDisabled()"></image-upload>
 
             <div ng-if="formData.companyTypeId == 6">
               <image-upload image-type="receiptImage" form-data-bind="formData" editing-company="editingCompany" ng-hide="isDisabled()"></image-upload>
@@ -267,18 +267,22 @@
         <h3 id="company-languages">Company Languages</h3>
           <div class="col-xs-12 col-sm-6">
             <div ng-show="isCompanyRetail" ng-if="isCompanyRetail">
+              <div class="form-group">
                 <label>Back Office Default Language*</label>
                                 <select ng-model="formData.defaultLanguage" class="form-control" id="backOfficeDefaultLanguage"
                                 name="backOfficeDefaultLanguage"  ng-change="onChangeDefaultLanguage()" required="true">
                                     <option value="{{ lng.id }}" ng-repeat="lng in defaultLanguages | orderBy:'languageName'">{{ lng.languageName }}</option>
                                 </select>
+              </div>
             </div>
             <div ng-show="!isCompanyRetail" ng-if="!isCompanyRetail">
+              <div class="form-group">
                 <label>Default Language*</label>
                                 <select ng-model="formData.defaultLanguage" class="form-control" id="defaultLanguage"
                                 name="defaultLanguage"  ng-change="onChangeDefaultLanguage()" required="true">
                                     <option value="{{ lng.id }}" ng-repeat="lng in defaultLanguages | orderBy:'languageName'">{{ lng.languageName }}</option>
                                 </select>
+              </div>
             </div>
 
             <label ng-show="isCompanyRetail">Back Office Additional Language</label>
@@ -294,12 +298,14 @@
           </div>
 
           <div class="col-xs-12 col-sm-6" ng-show="isCompanyRetail" ng-if="isCompanyRetail">
+            <div class="form-group">
              <label>ePOS Default Language*</label>
                                 <select ng-model="formData.defaultEposLanguage" class="form-control" id="defaultEposLanguage"
                                 id="eposDefaultLanguage" name="eposDefaultLanguage" ng-change="onChangeEposDefaultLanguage()" required="true">
                                     <option value="{{ eposlng.id }}" ng-repeat="eposlng in defaultEposLanguages | orderBy:'languageName'">{{ eposlng.languageName }}</option>
                                 </select>
-
+            </div>
+            <div class="form-group">
               <label>ePOS Additional Language</label>
               <ui-select multiple ng-model="formData.eposLanguages" theme="bootstrap" on-remove="onChangeEposAdditionalLanguage()" on-select="onChangeEposAdditionalLanguage()" >
                 <ui-select-match placeholder="Languages">{{ $item.languageName }}
@@ -309,6 +315,7 @@
                 </ui-select-choices>
               </ui-select>
             </div>
+          </div>
 
       </fieldset>
 
@@ -361,12 +368,14 @@
           </div>
 
           <div class="col-xs-12 col-sm-6">
-            <label>Country*</label>
-            <select ng-model="countryVat.countryId" class="form-control">
-              <option ng-selected="countryVat.countryId === country.id" ng-repeat="country in countries"
-                      value="{{ country.id }}">{{ country.countryName }}
-              </option>
-            </select>
+            <div class="form-group">
+              <label>Country*</label>
+              <select ng-model="countryVat.countryId" class="form-control">
+                <option ng-selected="countryVat.countryId === country.id" ng-repeat="country in countries"
+                        value="{{ country.id }}">{{ country.countryName }}
+                </option>
+              </select>
+            </div>
           </div>
 
         </div>
@@ -396,45 +405,51 @@
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-6">
-              <label>Cabin Name*</label>
-              <input custom-pattern="alphanumericSpaces"
-                     custom-validity
-                     required
-                     ng-disabled="cabinClass.readOnly"
-                     type="text"
-                     maxlength="10"
-                     name="cabinClassName-{{$index}}"
-                     class="form-control"
-                     id="cabinClassName-{{$index}}"
-                     ng-model="cabinClass.cabinClass"/>
+              <div class="form-group">
+                <label>Cabin Name*</label>
+                <input custom-pattern="alphanumericSpaces"
+                       custom-validity
+                       required
+                       ng-disabled="cabinClass.readOnly"
+                       type="text"
+                       maxlength="10"
+                       name="cabinClassName-{{$index}}"
+                       class="form-control"
+                       id="cabinClassName-{{$index}}"
+                       ng-model="cabinClass.cabinClass"/>
+              </div>
             </div>
             <div class="col-xs-12 col-sm-6">
-              <label>Cabin Code*</label>
-              <input custom-pattern="alphanumeric"
-                     custom-validity
-                     required
-                     ng-disabled="cabinClass.readOnly"
-                     type="text"
-                     maxlength="5"
-                     name="cabinClassCode-{{$index}}"
-                     class="form-control"
-                     id="cabinClassCode-{{$index}}"
-                     ng-model="cabinClass.code"/>
+              <div class="form-group">
+                <label>Cabin Code*</label>
+                <input custom-pattern="alphanumeric"
+                       custom-validity
+                       required
+                       ng-disabled="cabinClass.readOnly"
+                       type="text"
+                       maxlength="5"
+                       name="cabinClassCode-{{$index}}"
+                       class="form-control"
+                       id="cabinClassCode-{{$index}}"
+                       ng-model="cabinClass.code"/>
+              </div>
             </div>
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-12">
-              <label>Cabin Description*</label>
-              <input custom-pattern="word"
-                     custom-validity
-                     required
-                     ng-disabled="cabinClass.readOnly"
-                     type="text"
-                     maxlength="25"
-                     name="cabinClassDescription-{{$index}}"
-                     class="form-control"
-                     id="cabinClassDescription-{{$index}}"
-                     ng-model="cabinClass.cabinClassDescription" />
+              <div class="form-group">
+                <label>Cabin Description*</label>
+                <input custom-pattern="word"
+                       custom-validity
+                       required
+                       ng-disabled="cabinClass.readOnly"
+                       type="text"
+                       maxlength="25"
+                       name="cabinClassDescription-{{$index}}"
+                       class="form-control"
+                       id="cabinClassDescription-{{$index}}"
+                       ng-model="cabinClass.cabinClassDescription" />
+              </div>
             </div>
           </div>
         </div>
