--- a/app/views/directives/image-upload.html
+++ b/app/views/directives/image-upload.html
@@ -3,7 +3,8 @@
 
   <div ngf-select="" ngf-drop="" class="drop-box retail-drop-box" ng-model="files" ng-model-rejected="rejFiles"
        ngf-change="filesChanged()" ngf-drag-over-class="dragover" ngf-multiple="true" ngf-allow-dir="true"
-       ngf-accept="'{{imageName}}.{{fileFormat}}'" ngf-validate = "{size: {max: '{{itemMaxSize}}', min: '10B'}, height: {max: {{imgHeight}}}, width: {max: {{imgWidth}}}}">
+       ngf-accept="'{{imageName}}.{{fileFormat}}'"
+       ngf-validate = "{size: {max: '{{itemMaxSize}}', min: '10B'}, height: {max: {{imgHeight}}}, width: {max: {{imgWidth}}}}">
     <b>{{imageTypeText}}</b><br>
     <b>Drop Images, or Click.</b>
 
@@ -28,7 +29,11 @@
     <i ng-show="f.$error === 'height.max' || f.$error === 'width.max'">File {{f.name}} has exceed maximum allowed resolution: {{imageSize}} pixels.</i>
     <i ng-show="f.$error === 'size.max'">File {{f.name}} has exceed maximum allowed size: {{itemMaxSize}}.</i>
     <i ng-show="f.$error === 'accept'">Image is invalid, or is not an accepted file type.<br/>Accepted image type: {{fileFormat}}.</i>
+    {{imageName}}.{{fileFormat}}
+    {{f}}
   </p>
+
+
 
   <div class="thumbnails" ng-show="files.length" ng-repeat="(fileKey, file) in files">
     <div class="panel panel-default">
