--- a/app/views/user-list.html
+++ b/app/views/user-list.html
@@ -1,5 +1,4 @@
 <div class="module-container">
-
   <div class="list-controls">
     <h1>{{viewName}}</h1>
 
@@ -12,7 +11,7 @@
 
   <div class="table-responsive">
     <!-- table infinite-scroll="loadCompanies()" class="table table-bordered table-hover"-->
-    <table infinite-scroll="loadUsers()" class="table table-bordered table-hover">
+    <table class="table table-bordered table-hover">
     <thead>
     <tr>
       <th>User Name</th>
