--- a/app/views/user-create.html
+++ b/app/views/user-create.html
@@ -9,7 +9,7 @@
           </div>
           <div class="col-xs-6 text-right">
             <fieldset>
-              <button class="btn btn-default" ng-click="leaveView('user-list')">
+              <button class="btn btn-default" ng-click="leaveView('user-list')"  ng-hide="viewOnly">
                 <span class="fa fa-remove" aria-hidden="true"></span>
                 <span class="hidden-xs">Cancel</span>
               </button>
@@ -38,12 +38,23 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6">
           <fieldset ng-disabled="viewOnly">
+
             <input-text label="User Name" name="userName" required="true" pattern="regexp.sentence"
                         placeholder="User Name" min-length="1" max-length="40"></input-text>
+
             <input-text label="Email" name="email" required="true" pattern="regexp.sentence"
                         placeholder="Email" min-length="1" max-length="40"></input-text>
-            <input-text label="Company" name="company" required="true" pattern="regexp.alphanumeric"
-                        placeholder="Company" min-length="1" max-length="10"></input-text>
+            
+            <div class="form-group">
+            <label>Organization *</label>
+            <ui-select name="organization" ng-model="formData.organization" theme="bootstrap" required ng-disabled="viewOnly">
+              <ui-select-match placeholder="Start typing to find an organization" allow-clear="true">{{ $select.selected.name }}</ui-select-match>
+              <ui-select-choices repeat="organization in organizations | filter: $select.search | orderBy:'name'">
+                <div ng-bind-html="organization.name | highlight: $select.search"></div>
+              </ui-select-choices>
+            </ui-select>
+            </div>
+            
             <div class="form-group">
               <input type="checkbox"
                      ng-model="formData.enabled"
@@ -55,10 +66,20 @@
 
         <div class="col-xs-12 col-sm-6">
           <fieldset ng-disabled="viewOnly">
-            <input-text label="User First Name" name="firstName" pattern="regexp.sentence"
+            <input-text label="User First Name" name="firstName" required="true" pattern="regexp.sentence"
                         placeholder="User First Name" min-length="1" max-length="40"></input-text>
-            <input-text label="User Last Name" name="lastName" pattern="regexp.sentence"
+            <input-text label="User Last Name" name="lastName" required="true" pattern="regexp.sentence"
                         placeholder="User Last Name" min-length="1" max-length="40"></input-text>
+            
+            <div class="form-group">
+              <date-picker-field
+                name="userLoginExpired"
+                class="form-group"
+                form="formData"
+                ng-model="formData.expiredDate"
+                label="User Login Expired">
+              </date-picker-field>
+            </div>            
             
             <div class="form-group">
               <input type="checkbox"
