--- a/app/views/user-list.html
+++ b/app/views/user-list.html
@@ -18,6 +18,7 @@
       <th>Email</th>
       <th>Company</th>
       <th>Enabled</th>
+      <th>User Login Expired</th>
       <th>Updated Date/Time</th>
       <th>Updated By</th>
       <th>Actions</th>
@@ -30,6 +31,7 @@
       <td>{{ user.email }}</td>
       <td>{{ user.companyName }}</td>
       <td>{{ user.enabled }}</td>
+      <td>{{ getExpiredDate(user) }}</td>
       <td>{{ getUpdatedOn(user) }}</td>
       <td>{{ user.updatedBy }}</td>
       <!-- td>
