--- a/app/views/company-create.html
+++ b/app/views/company-create.html
@@ -201,7 +201,7 @@
             <div class="form-group">
               <label>Base Currency*</label>
 
-              <select ng-model="formData.baseCurrencyId" class="form-control">
+              <select ng-model="formData.baseCurrencyId" name="baseCurrency" class="form-control" required>
                 <option ng-selected="isSelected(formData.baseCurrencyId, currency.id)"
                         ng-repeat="currency in currencies | unique: 'code' | orderBy:'code'"
                         value="{{currency.id}}">
