--- a/app/views/user-create.html
+++ b/app/views/user-create.html
@@ -48,7 +48,7 @@
             <div class="form-group">
             <label>Organization *</label>
             <ui-select name="organization" ng-model="formData.organization" theme="bootstrap" required ng-disabled="viewOnly">
-              <ui-select-match placeholder="Start typing to find an organization" allow-clear="true">{{ $select.selected.name }}</ui-select-match>
+              <ui-select-match placeholder="Start typing to find an organization">{{ $select.selected.name }}</ui-select-match>
               <ui-select-choices repeat="organization in organizations | filter: $select.search | orderBy:'name'">
                 <div ng-bind-html="organization.name | highlight: $select.search"></div>
               </ui-select-choices>
@@ -80,7 +80,7 @@
                 label="User Login Expired">
               </date-picker-field>
             </div>            
-            
+                        
             <div class="form-group">
               <input type="checkbox"
                      ng-model="formData.allowAllStations"
@@ -97,6 +97,17 @@
               <i ng-class="getClassForAccordionArrows(userRolesOpen)" class="fa"></i>
               User Roles
             </accordion-heading>
+
+           <div class="form-group">
+              <label>Privilege</label>
+              <ui-select name="userPrivilegeName" ng-model="userPrivilege" theme="bootstrap" on-select="changeUserPrivilege(userPrivilege.id)">
+                <ui-select-match placeholder="Start typing to find User Privilege">{{ $select.selected.name }}</ui-select-match>
+                <ui-select-choices repeat="privilege in userPrivilegeList | filter: $select.search | orderBy:'id'">
+                  <div ng-bind-html="privilege.name | highlight: $select.search"></div>
+                </ui-select-choices>
+            </ui-select>
+              
+            </div>            
 
             <div clas="form-group">           
               <table class="table table-bordered table-hover">
