--- a/app/views/user-list.html
+++ b/app/views/user-list.html
@@ -1,17 +1,32 @@
 <div class="module-container">
   <div class="list-controls">
+  <div class="row item-list-row">
     <h1>{{viewName}}</h1>
-
-    <div class="row">
-      <div class="col-xs-6">
-        <a href="/#/user-create" ng-show="isCRUD" class="btn btn-primary"><span class="fa fa-plus"></span> Create User</a>
-      </div>
-    </div>
   </div>
+    <form name="userSearchForm">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-xs-12">
+            <a href="/#/user-create" ng-show="isCRUD" class="btn btn-primary"><span class="fa fa-plus"></span> Create User</a><br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">&nbsp;</div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="form-group">
+              <label>Filter User By Name</label>
+              <input type="text" class="form-control" ng-model="fUserName" />
+            </div>
+          </div>
 
-  <div class="table-responsive">
-    <!-- table infinite-scroll="loadCompanies()" class="table table-bordered table-hover"-->
-    <table class="table table-bordered table-hover">
+        </div>
+      </div>
+    </form>
+  </div>
+<div class="table-responsive">  
+  <table class="table table-bordered table-hover">
     <thead>
     <tr>
       <th>User Name</th>
@@ -25,8 +40,8 @@
     </tr>
     </thead>
     <tbody>
-    <!-- tr ng-repeat="company in companyList"-->
-    <tr ng-repeat="user in userList">
+    <tr id="user-{{$index}}" ng-repeat="user in userList | toArray:false | filter:{userName: fUserName} | orderBy: 'userName' track by $index">
+    
       <td>{{ user.userName }}</td>
       <td>{{ user.email }}</td>
       <td>{{ user.companyName }}</td>
@@ -34,16 +49,6 @@
       <td>{{ getExpiredDate(user) }}</td>
       <td>{{ getUpdatedOn(user) }}</td>
       <td>{{ user.updatedBy }}</td>
-      <!-- td>
-        <button type="button" class="btn btn-info btn-xs" aria-label="View Company"
-                ng-click="viewCompany(company)">
-          <i class="fa fa-file" aria-hidden="true"></i>
-        </button>
-        <button type="button" class="btn btn-primary btn-xs" ng-show="isCRUD" aria-label="Edit Company"
-                ng-click="editCompany(company)">
-          <i class="fa fa-pencil" aria-hidden="true"></i>
-        </button>
-      </td-->
       <td>
         <button type="button" class="btn btn-info btn-xs" aria-label="View User"
                 ng-click="viewUser(user)">
@@ -57,10 +62,7 @@
     </tr>
     </tbody>
   </table>
-    </div>
-  <!-- p ng-if="companyList.length > 0" class="record-count small text-center">Showing {{companyList.length}} records</p-->
-  <p ng-if="userList.length > 0" class="record-count small text-center">Showing {{userList.length}} records</p>
-  <p class="loading-more alert alert-info text-center"><i class="fa fa-spin fa-circle-o-notch"></i> Loading more...</p>
+ </div> 
+ <p ng-if="userList.length > 0 && fUserName.length > 0" class="record-count small text-center">Found {{userList.length}} records</p>
 </div>
-
 <dynamic-left-nav></dynamic-left-nav>
